added swagger schemes
